// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Group as buttons renders correctly 1`] = `
.c0.rovna-ui-radio-group {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper {
  margin-inline-end: 16px;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

<div
  className="rovna-ui-radio-group rovna-ui-radio-group-outline c0 css-dev-only-do-not-override-u64svk"
  role="radiogroup"
>
  <label
    className="rovna-ui-radio-button-wrapper css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio-button"
    >
      <input
        checked={false}
        className="rovna-ui-radio-button-input"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="A"
      />
      <span
        className="rovna-ui-radio-button-inner"
      />
    </span>
    <span>
      Каменные материалы
    </span>
  </label>
  <label
    className="rovna-ui-radio-button-wrapper css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio-button"
    >
      <input
        checked={false}
        className="rovna-ui-radio-button-input"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="B"
      />
      <span
        className="rovna-ui-radio-button-inner"
      />
    </span>
    <span>
      Растворы
    </span>
  </label>
  <label
    className="rovna-ui-radio-button-wrapper css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio-button"
    >
      <input
        checked={false}
        className="rovna-ui-radio-button-input"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="C"
      />
      <span
        className="rovna-ui-radio-button-inner"
      />
    </span>
    <span>
      Металлы
    </span>
  </label>
</div>
`;

exports[`Radio Group as buttons renders correctly 2`] = `
.c0.rovna-ui-radio-group {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper {
  margin-inline-end: 16px;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

<div
  className="rovna-ui-radio-group rovna-ui-radio-group-outline c0 css-dev-only-do-not-override-u64svk"
  role="radiogroup"
>
  <label
    className="rovna-ui-radio-button-wrapper css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio-button"
    >
      <input
        checked={false}
        className="rovna-ui-radio-button-input"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="A"
      />
      <span
        className="rovna-ui-radio-button-inner"
      />
    </span>
    <span>
      Option 1
    </span>
  </label>
  <label
    className="rovna-ui-radio-button-wrapper css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio-button"
    >
      <input
        checked={false}
        className="rovna-ui-radio-button-input"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="B"
      />
      <span
        className="rovna-ui-radio-button-inner"
      />
    </span>
    <span>
      Option 2
    </span>
  </label>
  <label
    className="rovna-ui-radio-button-wrapper css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio-button"
    >
      <input
        checked={false}
        className="rovna-ui-radio-button-input"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="C"
      />
      <span
        className="rovna-ui-radio-button-inner"
      />
    </span>
    <span>
      Option 3
    </span>
  </label>
</div>
`;

exports[`Radio Group renders correctly 1`] = `
.c0.rovna-ui-radio-group {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper {
  margin-inline-end: 16px;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

.c1.rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c1.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

<div
  className="rovna-ui-radio-group rovna-ui-radio-group-outline c0 css-dev-only-do-not-override-u64svk"
  role="radiogroup"
>
  <label
    className="rovna-ui-radio-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio ant-wave-target"
    >
      <input
        checked={false}
        className="rovna-ui-radio-input"
        data-testid="rovna-ui-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="A"
      />
      <span
        className="rovna-ui-radio-inner"
      />
    </span>
    <span>
      Каменные материалы
    </span>
  </label>
  <label
    className="rovna-ui-radio-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio ant-wave-target"
    >
      <input
        checked={false}
        className="rovna-ui-radio-input"
        data-testid="rovna-ui-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="B"
      />
      <span
        className="rovna-ui-radio-inner"
      />
    </span>
    <span>
      Растворы
    </span>
  </label>
  <label
    className="rovna-ui-radio-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio ant-wave-target"
    >
      <input
        checked={false}
        className="rovna-ui-radio-input"
        data-testid="rovna-ui-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="C"
      />
      <span
        className="rovna-ui-radio-inner"
      />
    </span>
    <span>
      Металлы
    </span>
  </label>
</div>
`;

exports[`Radio Group vertical renders correctly 1`] = `
.c0.rovna-ui-radio-group {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  row-gap: 8px;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c0.rovna-ui-radio-group .rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

.c1.rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c1.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c1.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

<div
  className="rovna-ui-radio-group rovna-ui-radio-group-outline c0 css-dev-only-do-not-override-u64svk"
  role="radiogroup"
>
  <label
    className="rovna-ui-radio-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio ant-wave-target"
    >
      <input
        checked={false}
        className="rovna-ui-radio-input"
        data-testid="rovna-ui-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="A"
      />
      <span
        className="rovna-ui-radio-inner"
      />
    </span>
    <span>
      Каменные материалы
    </span>
  </label>
  <label
    className="rovna-ui-radio-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio ant-wave-target"
    >
      <input
        checked={false}
        className="rovna-ui-radio-input"
        data-testid="rovna-ui-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="B"
      />
      <span
        className="rovna-ui-radio-inner"
      />
    </span>
    <span>
      Растворы
    </span>
  </label>
  <label
    className="rovna-ui-radio-wrapper c1 css-dev-only-do-not-override-u64svk"
    style={{}}
  >
    <span
      className="rovna-ui-radio ant-wave-target"
    >
      <input
        checked={false}
        className="rovna-ui-radio-input"
        data-testid="rovna-ui-radio"
        disabled={false}
        onChange={[Function]}
        type="radio"
        value="C"
      />
      <span
        className="rovna-ui-radio-inner"
      />
    </span>
    <span>
      Металлы
    </span>
  </label>
</div>
`;

exports[`Radio disabled renders correctly 1`] = `
.c0.rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c0.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

<label
  className="rovna-ui-radio-wrapper rovna-ui-radio-wrapper-disabled c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <span
    className="rovna-ui-radio ant-wave-target rovna-ui-radio-disabled"
  >
    <input
      aria-label="Выбрать вариант"
      checked={false}
      className="rovna-ui-radio-input"
      data-testid="rovna-ui-radio"
      disabled={true}
      onChange={[Function]}
      type="radio"
    />
    <span
      className="rovna-ui-radio-inner"
    />
  </span>
</label>
`;

exports[`Radio renders correctly 1`] = `
.c0.rovna-ui-radio-wrapper .rovna-ui-radio {
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
}

.c0.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner {
  background-color: #FFFFFFFF;
}

.c0.rovna-ui-radio-wrapper .rovna-ui-radio-checked:not(.rovna-ui-radio-disabled) .rovna-ui-radio-inner:after {
  background-color: #0062C9FF;
}

<label
  className="rovna-ui-radio-wrapper c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <span
    className="rovna-ui-radio ant-wave-target"
  >
    <input
      aria-label="Выбрать вариант"
      checked={false}
      className="rovna-ui-radio-input"
      data-testid="rovna-ui-radio"
      disabled={false}
      onChange={[Function]}
      type="radio"
    />
    <span
      className="rovna-ui-radio-inner"
    />
  </span>
</label>
`;
